<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.MainActivity"
    android:background="@color/primaryDarkColor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pokedex_fondo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <FrameLayout
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:src="@drawable/circulo"
                        app:tint="@color/black"/>

                    <ImageView
                        android:id="@+id/ivIndicador"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:src="@drawable/circulo"
                        app:tint="@color/blue"/>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/circulo"
                        app:tint="@color/black"/>

                    <ImageView
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:layout_gravity="center"
                        android:src="@drawable/circulo"
                        app:tint="@color/red"/>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/circulo"
                        app:tint="@color/black"/>

                    <ImageView
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:layout_gravity="center"
                        android:src="@drawable/circulo"
                        app:tint="@color/amarillo"/>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/circulo"
                        app:tint="@color/black"/>

                    <ImageView
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:layout_gravity="center"
                        android:src="@drawable/circulo"
                        app:tint="@color/verde_limon"/>

                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:textSize="30sp"
                    android:fontFamily="@font/pokemon_solid"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bienvenido"
                android:layout_gravity="center"
                android:textSize="40sp"
                android:fontFamily="@font/pokemon_solid"
                android:textColor="@color/black"/>


            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bienvenido_texto"
                android:textAlignment="textStart"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textSize="15sp"
                android:fontFamily="@font/pokemon_solid"
                android:textColor="@color/black"/>

            <FrameLayout
                android:layout_gravity="center"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/ivImagenPokemonInicio"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:background="@drawable/fondo"/>

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:background="@drawable/marco"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="33dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/pokemon_solid"
                    android:text="@string/pokemon"
                    android:textColor="@color/black" />

            </FrameLayout>



            <Button
                android:id="@+id/bIrAPokedex"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="center"
                android:text="@string/bienvenido_boton_1"
                android:fontFamily="@font/pokemon_solid"
                android:theme="@style/MiBotonAzul"/>

            <Button
                android:id="@+id/bSalir"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="center"
                android:text="@string/bienvenido_boton_2"
                android:fontFamily="@font/pokemon_solid"
                android:theme="@style/MiBotonVerde"/>



        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>