<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pokedexal.PokedexAleatorioActivity"
    android:background="@color/primaryDarkColor">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pokedex_fondo">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <FrameLayout
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:src="@drawable/circulo"
                        app:tint="@color/black"/>

                    <ImageView
                        android:id="@+id/ivIndicador"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:src="@drawable/circulo"
                        app:tint="@color/blue"/>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/circulo"
                        app:tint="@color/black"/>

                    <ImageView
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:layout_gravity="center"
                        android:src="@drawable/circulo"
                        app:tint="@color/red"/>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/circulo"
                        app:tint="@color/black"/>

                    <ImageView
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:layout_gravity="center"
                        android:src="@drawable/circulo"
                        app:tint="@color/amarillo"/>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/circulo"
                        app:tint="@color/black"/>

                    <ImageView
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:layout_gravity="center"
                        android:src="@drawable/circulo"
                        app:tint="@color/verde_limon"/>

                </FrameLayout>

                <Button
                    android:id="@+id/bRegresar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/pekedex_boton_1"
                    android:textSize="10sp"
                    android:fontFamily="@font/pokemon_solid"
                    android:layout_marginLeft="30dp"
                    android:theme="@style/MiBotonVerde"/>

            </LinearLayout>

            <FrameLayout
                android:layout_gravity="center"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/ivImagenPokemon"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:background="@drawable/fondo"/>

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:background="@drawable/marco"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="33dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/pokemon_solid"
                    android:text="@string/pokemon"
                    android:textColor="@color/black" />

            </FrameLayout>

            <ProgressBar
                android:id="@+id/pbTiempo"
                android:layout_marginTop="5dp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="?android:attr/progressBarStyleHorizontal"
                android:theme="@style/MiBotonVerde"
                android:max="100" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <FrameLayout
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginLeft="40dp">

                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center"
                        android:src="@drawable/circulo"
                        app:tint="@color/black"/>

                    <ImageView
                        android:layout_width="7dp"
                        android:layout_height="7dp"
                        android:layout_gravity="center"
                        android:src="@drawable/circulo"
                        app:tint="@color/blue"/>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="90dp"
                    android:layout_height="10dp"
                    android:layout_marginLeft="10dp">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ovalo"
                        app:tint="@color/black"/>

                    <ImageView
                        android:layout_width="87dp"
                        android:layout_height="7dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ovalo"
                        app:tint="@color/amarillo"/>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="90dp"
                    android:layout_height="10dp"
                    android:layout_marginLeft="10dp">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ovalo"
                        app:tint="@color/black"/>

                    <ImageView
                        android:layout_width="87dp"
                        android:layout_height="7dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ovalo"
                        app:tint="@color/verde_limon"/>

                </FrameLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="10dp"
                android:background="@drawable/nombre_pokemon_fondo">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/id"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvIDPokemon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="@font/pokemon_solid"
                        android:textColor="@color/black"
                        android:text="000"
                        android:textSize="18sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:text="@string/nombre"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvNombrePokemon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/pokemon_solid"
                        android:textColor="@color/black"
                        android:text="Nombre "
                        android:textSize="18sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:text="@string/altura"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvAlturaPokemon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/pokemon_solid"
                        android:textColor="@color/black"
                        android:text="000 pies aprox"
                        android:textSize="15sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:text="@string/peso"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvPesoPokemon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/pokemon_solid"
                        android:textColor="@color/black"
                        android:text="000 libras aprox"
                        android:textSize="15sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:text="@string/experiencia"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvExpPokemon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/pokemon_solid"
                        android:textColor="@color/black"
                        android:text="000 aprox"
                        android:textSize="15sp"/>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/bMostrarPokemon"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="center"
                android:text="@string/pekedex_boton_2"
                android:fontFamily="@font/pokemon_solid"
                android:theme="@style/MiBotonAzul"/>



        </LinearLayout>

        
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>